- Preventing user from scrolling the page before the preload animation on iOS devices. - Did some tweaks to fix preload animation glitches.

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -5,6 +5,8 @@ body {
 
 .no-scroll {
     overflow-y: hidden!important;
+    position: fixed;
+    width: 100%;
 }
 
 /** Text Selection **/
